--- a/index.html
+++ b/index.html
@@ -4,63 +4,95 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🌱 IoT Smart Garden Dashboard</title>
-<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
-  .card { @apply bg-white p-4 rounded-lg shadow; }
-  .sensor-value { @apply text-2xl font-bold mt-2; }
-  .btn { @apply px-4 py-2 rounded text-white; }
-  .btn-green { @apply bg-green-500 hover:bg-green-600; }
-  .btn-red { @apply bg-red-500 hover:bg-red-600; }
+body { background: #f5f7fa; font-family: 'Segoe UI', sans-serif; }
+.card { border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.12); margin-bottom: 20px; text-align:center; padding:20px;}
+.sensor-value { font-size: 2rem; font-weight: bold; margin-top:10px; }
+.btn-group .btn { min-width:100px; }
+.gradient-card { background: linear-gradient(135deg,#6dd5ed,#2193b0); color:#fff; }
+.gradient-card2 { background: linear-gradient(135deg,#f093fb,#f5576c); color:#fff; }
+.gradient-card3 { background: linear-gradient(135deg,#43e97b,#38f9d7); color:#fff; }
 </style>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col items-center p-4">
+<body>
+<div class="container py-4">
 
-<h1 class="text-3xl font-bold mb-6 text-center">🌱 IoT Smart Garden Dashboard</h1>
+  <h1 class="fw-bold text-center mb-4">🌱 IoT Smart Garden Dashboard</h1>
+  
+  <!-- SENSOR DATA -->
+  <div class="row g-3 mb-3">
+    <div class="col-md-4">
+      <div class="card gradient-card">
+        <div>🌿 Độ ẩm đất</div>
+        <div class="sensor-value" id="soil">- %</div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card gradient-card2">
+        <div>🌤 Nhiệt độ</div>
+        <div class="sensor-value" id="temp">- °C</div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card gradient-card3">
+        <div>💧 Độ ẩm KK</div>
+        <div class="sensor-value" id="hum">- %</div>
+      </div>
+    </div>
+  </div>
 
-<!-- Sensor Data -->
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 w-full max-w-6xl mb-6">
-  <div class="card text-center">
-    <div>🌿 Độ ẩm đất</div>
-    <div id="soil" class="sensor-value">- %</div>
+  <!-- SYSTEM STATUS -->
+  <div class="row g-3 mb-3">
+    <div class="col-md-3">
+      <div class="card">
+        <div>🚿 Dòng chảy</div>
+        <div class="sensor-value" id="flow">-</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <div>📉 Min Threshold</div>
+        <div class="sensor-value" id="min_val">- %</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <div>📈 Max Threshold</div>
+        <div class="sensor-value" id="max_val">- %</div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <div>⏱️ Thời gian tưới tiếp theo</div>
+        <div class="sensor-value" id="next_time">- phút</div>
+      </div>
+    </div>
   </div>
-  <div class="card text-center">
-    <div>🌤 Nhiệt độ</div>
-    <div id="temp" class="sensor-value">- °C</div>
-  </div>
-  <div class="card text-center">
-    <div>💧 Độ ẩm KK</div>
-    <div id="hum" class="sensor-value">- %</div>
-  </div>
-  <div class="card text-center">
-    <div>🚿 Dòng chảy</div>
-    <div id="flow" class="sensor-value">-</div>
-  </div>
-  <div class="card text-center">
-    <div>📉 Min Threshold</div>
-    <div id="min_val" class="sensor-value">- %</div>
-  </div>
-  <div class="card text-center">
-    <div>📈 Max Threshold</div>
-    <div id="max_val" class="sensor-value">- %</div>
-  </div>
-  <div class="card text-center">
-    <div>⏱️ Thời gian tưới tiếp theo</div>
-    <div id="next_time" class="sensor-value">- phút</div>
-  </div>
-  <div class="card text-center">
-    <div>💡 Chế độ</div>
-    <div id="mode" class="sensor-value">-</div>
-  </div>
-  <div class="card text-center">
-    <div>🚰 Bơm</div>
-    <div id="pump" class="sensor-value">-</div>
-  </div>
-</div>
 
-<!-- Control -->
-<div class="grid grid-cols-2 gap-4 w-full max-w-md">
-  <button id="modeBtn" class="btn btn-red">Đổi chế độ</button>
-  <button id="pumpBtn" class="btn btn-green">Bật/Tắt Bơm</button>
+  <!-- CONTROL PANEL -->
+  <div class="row g-3 mt-3">
+    <div class="col-md-6">
+      <div class="card p-3 text-center">
+        <div>💡 Chế độ</div>
+        <div class="sensor-value" id="mode">-</div>
+        <div class="btn-group mt-2">
+          <button class="btn btn-primary" id="modeBtn">Đổi chế độ</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card p-3 text-center">
+        <div>🚰 Bơm</div>
+        <div class="sensor-value" id="pump">-</div>
+        <div class="btn-group mt-2">
+          <button class="btn btn-success" id="pumpBtn">Bật/Tắt</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <script>
@@ -70,7 +102,6 @@ async function fetchData() {
   try {
     const sensorRes = await fetch(`${API_BASE}/api/data`);
     const sensor = await sensorRes.json();
-
     const statusRes = await fetch(`${API_BASE}/api/status`);
     const status = await statusRes.json();
 
@@ -78,24 +109,20 @@ async function fetchData() {
     document.getElementById('temp').textContent = sensor.temp !== undefined ? sensor.temp + '°C' : '-';
     document.getElementById('hum').textContent = sensor.hum !== undefined ? sensor.hum + '%' : '-';
     document.getElementById('flow').textContent = sensor.flow !== undefined ? sensor.flow : '-';
-
     document.getElementById('min_val').textContent = status.min_val !== undefined ? status.min_val + '%' : '-';
     document.getElementById('max_val').textContent = status.max_val !== undefined ? status.max_val + '%' : '-';
     document.getElementById('next_time').textContent = status.next_time !== undefined ? status.next_time + ' phút' : '-';
-
     document.getElementById('mode').textContent = status.mode || '-';
     document.getElementById('pump').textContent = status.pump ? 'BẬT' : 'TẮT';
-  } catch(err) {
-    console.error(err);
-  }
+  } catch(err) { console.error(err); }
 }
 
 document.getElementById('pumpBtn').addEventListener('click', async () => {
   const pumpState = document.getElementById('pump').textContent === 'BẬT';
   const mode = document.getElementById('mode').textContent || 'AUTO';
   await fetch(`${API_BASE}/api/control`, {
-    method: 'POST',
-    headers: {'Content-Type':'application/json'},
+    method:'POST',
+    headers:{ 'Content-Type':'application/json' },
     body: JSON.stringify({ pump: !pumpState, mode })
   });
   fetchData();
@@ -107,16 +134,15 @@ document.getElementById('modeBtn').addEventListener('click', async () => {
   const nextMode = modes[(modes.indexOf(currentMode) + 1) % modes.length];
   const pumpState = document.getElementById('pump').textContent === 'BẬT';
   await fetch(`${API_BASE}/api/control`, {
-    method: 'POST',
-    headers: {'Content-Type':'application/json'},
+    method:'POST',
+    headers:{ 'Content-Type':'application/json' },
     body: JSON.stringify({ pump: pumpState, mode: nextMode })
   });
   fetchData();
 });
 
-setInterval(fetchData, 5000);
+setInterval(fetchData, 2000);
 fetchData();
 </script>
-
 </body>
 </html>
