--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 body { background: #f5f7fa; font-family: 'Segoe UI', sans-serif; }
 .card { border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.12); margin-bottom: 20px; text-align:center; padding:20px;}
 .sensor-value { font-size: 2rem; font-weight: bold; margin-top:10px; }
-.btn-group .btn { min-width:100px; }
 .gradient-card { background: linear-gradient(135deg,#6dd5ed,#2193b0); color:#fff; }
 .gradient-card2 { background: linear-gradient(135deg,#f093fb,#f5576c); color:#fff; }
 .gradient-card3 { background: linear-gradient(135deg,#43e97b,#38f9d7); color:#fff; }
@@ -19,85 +18,72 @@ body { background: #f5f7fa; font-family: 'Segoe UI', sans-serif; }
 <body>
 <div class="container py-4">
 
-  <h1 class="fw-bold text-center mb-4">🌱 IoT Smart Garden Dashboard</h1>
-  
-  <!-- SENSOR DATA -->
-  <div class="row g-3 mb-3">
-    <div class="col-md-4">
-      <div class="card gradient-card">
-        <div>🌿 Độ ẩm đất</div>
-        <div class="sensor-value" id="soil">- %</div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card gradient-card2">
-        <div>🌤 Nhiệt độ</div>
-        <div class="sensor-value" id="temp">- °C</div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card gradient-card3">
-        <div>💧 Độ ẩm KK</div>
-        <div class="sensor-value" id="hum">- %</div>
-      </div>
-    </div>
-  </div>
+<h1 class="fw-bold text-center mb-4">🌱 IoT Smart Garden Dashboard</h1>
 
-  <!-- SYSTEM STATUS -->
-  <div class="row g-3 mb-3">
-    <div class="col-md-3">
-      <div class="card">
-        <div>🚿 Dòng chảy</div>
-        <div class="sensor-value" id="flow">-</div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card">
-        <div>📉 Min Threshold</div>
-        <div class="sensor-value" id="min_val">- %</div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card">
-        <div>📈 Max Threshold</div>
-        <div class="sensor-value" id="max_val">- %</div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card">
-        <div>⏱️ Thời gian tưới tiếp theo</div>
-        <div class="sensor-value" id="next_time">- phút</div>
-      </div>
-    </div>
-  </div>
+<!-- SENSOR DATA -->
+<div class="row g-3 mb-3">
+  <div class="col-md-4"><div class="card gradient-card"><div>🌿 Độ ẩm đất</div><div class="sensor-value" id="soil">- %</div></div></div>
+  <div class="col-md-4"><div class="card gradient-card2"><div>🌤 Nhiệt độ</div><div class="sensor-value" id="temp">- °C</div></div></div>
+  <div class="col-md-4"><div class="card gradient-card3"><div>💧 Độ ẩm KK</div><div class="sensor-value" id="hum">- %</div></div></div>
+</div>
 
-  <!-- CONTROL PANEL -->
-  <div class="row g-3 mt-3">
-    <div class="col-md-6">
-      <div class="card p-3 text-center">
-        <div>💡 Chế độ</div>
-        <div class="sensor-value" id="mode">-</div>
-        <div class="btn-group mt-2">
-          <button class="btn btn-primary" id="modeBtn">Đổi chế độ</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="card p-3 text-center">
-        <div>🚰 Bơm</div>
-        <div class="sensor-value" id="pump">-</div>
-        <div class="btn-group mt-2">
-          <button class="btn btn-success" id="pumpBtn">Bật/Tắt</button>
-        </div>
+<!-- SYSTEM STATUS -->
+<div class="row g-3 mb-3">
+  <div class="col-md-3"><div class="card"><div>🚿 Dòng chảy</div><div class="sensor-value" id="flow">-</div></div></div>
+  <div class="col-md-3"><div class="card"><div>📉 Min Threshold</div><div class="sensor-value" id="min_val">- %</div></div></div>
+  <div class="col-md-3"><div class="card"><div>📈 Max Threshold</div><div class="sensor-value" id="max_val">- %</div></div></div>
+  <div class="col-md-3"><div class="card"><div>⏱️ Thời gian tưới tiếp theo</div><div class="sensor-value" id="next_time">- phút</div></div></div>
+</div>
+
+<!-- CONTROL PANEL -->
+<div class="row g-3 mt-3">
+  <div class="col-md-4">
+    <div class="card p-3 text-center">
+      <div>💡 Chế độ</div>
+      <div class="sensor-value" id="mode">-</div>
+      <div class="btn-group mt-2">
+        <button class="btn btn-primary" id="modeBtn">Đổi chế độ</button>
       </div>
     </div>
   </div>
+  <div class="col-md-4">
+    <div class="card p-3 text-center">
+      <div>🚰 Bơm</div>
+      <div class="sensor-value" id="pump">-</div>
+      <div class="btn-group mt-2">
+        <button class="btn btn-success" id="pumpBtn">Bật/Tắt</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card p-3 text-center">
+      <div>⚡ Công suất bơm (%)</div>
+      <input type="range" class="form-range" min="0" max="100" step="1" id="pumpPower">
+      <span id="pumpPowerLabel">36%</span>
+    </div>
+  </div>
+</div>
+
+<!-- SCHEDULE -->
+<div class="row g-3 mt-3">
+  <div class="col-md-12">
+    <div class="card p-3">
+      <h5>Lịch tưới</h5>
+      <div id="scheduleList" class="mb-2"></div>
+      <div class="input-group mb-2">
+        <input type="time" id="scheduleTime" class="form-control">
+        <button class="btn btn-primary" id="addScheduleBtn">Thêm lịch</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 </div>
 
 <script>
 const API_BASE = "https://iot-server-yc6r.onrender.com";
 
+// FETCH DATA
 async function fetchData() {
   try {
     const sensorRes = await fetch(`${API_BASE}/api/data`);
@@ -105,43 +91,98 @@ async function fetchData() {
     const statusRes = await fetch(`${API_BASE}/api/status`);
     const status = await statusRes.json();
 
-    document.getElementById('soil').textContent = sensor.soil !== undefined ? sensor.soil + '%' : '-';
-    document.getElementById('temp').textContent = sensor.temp !== undefined ? sensor.temp + '°C' : '-';
-    document.getElementById('hum').textContent = sensor.hum !== undefined ? sensor.hum + '%' : '-';
-    document.getElementById('flow').textContent = sensor.flow !== undefined ? sensor.flow : '-';
-    document.getElementById('min_val').textContent = status.min_val !== undefined ? status.min_val + '%' : '-';
-    document.getElementById('max_val').textContent = status.max_val !== undefined ? status.max_val + '%' : '-';
-    document.getElementById('next_time').textContent = status.next_time !== undefined ? status.next_time + ' phút' : '-';
-    document.getElementById('mode').textContent = status.mode || '-';
+    document.getElementById('soil').textContent = sensor.soil ?? '- %';
+    document.getElementById('temp').textContent = sensor.temp ?? '- °C';
+    document.getElementById('hum').textContent = sensor.hum ?? '- %';
+    document.getElementById('flow').textContent = sensor.flow ?? '-';
+    document.getElementById('min_val').textContent = status.min_val ?? '- %';
+    document.getElementById('max_val').textContent = status.max_val ?? '- %';
+    document.getElementById('next_time').textContent = status.next_time ?? '- phút';
+    document.getElementById('mode').textContent = status.mode ?? '-';
     document.getElementById('pump').textContent = status.pump ? 'BẬT' : 'TẮT';
-  } catch(err) { console.error(err); }
+    document.getElementById('pumpPower').value = status.pump_power ?? 36;
+    document.getElementById('pumpPowerLabel').textContent = (status.pump_power ?? 36) + '%';
+    updateScheduleUI(status.schedules ?? []);
+  } catch(err){ console.error(err); }
 }
 
-document.getElementById('pumpBtn').addEventListener('click', async () => {
+// CONTROL BUTTONS
+document.getElementById('pumpBtn').addEventListener('click', async ()=>{
   const pumpState = document.getElementById('pump').textContent === 'BẬT';
   const mode = document.getElementById('mode').textContent || 'AUTO';
   await fetch(`${API_BASE}/api/control`, {
     method:'POST',
-    headers:{ 'Content-Type':'application/json' },
-    body: JSON.stringify({ pump: !pumpState, mode })
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ pump: !pumpState, mode })
   });
   fetchData();
 });
 
-document.getElementById('modeBtn').addEventListener('click', async () => {
+document.getElementById('modeBtn').addEventListener('click', async ()=>{
   const modes = ['AUTO','MANUAL','SCHEDULE','SLEEP'];
   const currentMode = document.getElementById('mode').textContent;
-  const nextMode = modes[(modes.indexOf(currentMode) + 1) % modes.length];
+  const nextMode = modes[(modes.indexOf(currentMode)+1)%modes.length];
   const pumpState = document.getElementById('pump').textContent === 'BẬT';
   await fetch(`${API_BASE}/api/control`, {
     method:'POST',
-    headers:{ 'Content-Type':'application/json' },
-    body: JSON.stringify({ pump: pumpState, mode: nextMode })
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ pump: pumpState, mode: nextMode })
   });
   fetchData();
 });
 
-setInterval(fetchData, 2000);
+// PUMP POWER
+const pumpPowerInput = document.getElementById('pumpPower');
+pumpPowerInput.addEventListener('input', () => {
+  document.getElementById('pumpPowerLabel').textContent = pumpPowerInput.value + '%';
+});
+pumpPowerInput.addEventListener('change', async () => {
+  await fetch(`${API_BASE}/api/control`, {
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ pump_power: parseInt(pumpPowerInput.value) })
+  });
+  fetchData();
+});
+
+// SCHEDULE
+function updateScheduleUI(schedules){
+  const list = document.getElementById('scheduleList');
+  list.innerHTML = '';
+  schedules.forEach((t,i)=>{
+    const div = document.createElement('div');
+    div.className='d-flex justify-content-between align-items-center mb-1';
+    div.innerHTML = `<span>${t.hour.toString().padStart(2,'0')}:${t.minute.toString().padStart(2,'0')}</span>
+                     <button class="btn btn-sm btn-danger" onclick="removeSchedule(${i})">X</button>`;
+    list.appendChild(div);
+  });
+}
+
+async function addSchedule(){
+  const val = document.getElementById('scheduleTime').value;
+  if(!val) return;
+  const [hour,minute] = val.split(':').map(Number);
+  await fetch(`${API_BASE}/api/control`,{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ add_schedule: {hour,minute} })
+  });
+  fetchData();
+  document.getElementById('scheduleTime').value='';
+}
+
+document.getElementById('addScheduleBtn').addEventListener('click', addSchedule);
+
+async function removeSchedule(index){
+  await fetch(`${API_BASE}/api/control`,{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({ remove_schedule: index })
+  });
+  fetchData();
+}
+
+setInterval(fetchData,2000);
 fetchData();
 </script>
 </body>
